fix: solve buttons_container CSS issue with z-index

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -408,6 +408,7 @@
 				>.buttons_container {
 					display: block !important;
 					white-space: nowrap;
+					z-index: 2;
 
 					.button:last-of-type {
 						margin-right: 0.75rem;
